# LoadShedderInterface

./: .gitignore  README.md  plot-sec22-results.sh
requirements/: README.md  ubuntu1804.yml
src/: CMakeLists.txt  config.properties  example_python.py  mapping_features.py  request_handler.py
src/capnp_serial/: CMakeLists.txt  mapping.capnp  messages.capnp
src/color_analysis/: extract_per_frame_hsv.py  extract_per_frame_hsv.sh  extract_positive_frame_sequences.py  extract_specific_time_frames.py  extract_sv_weights.py  extract_sv_weights.sh  fix_bin_file_labels.py  kmeans.py  label_video_frames.py  num_pixels_vs_frame.py  object_based_metrics_calc.py  pixel_fraction_vs_frame.py  plot_cross_video_heatmaps.sh  plot_hsv_hists_specific_frame.py  plot_hue_pdf.py  plot_sv_heatmaps.sh  plot_sv_weight_heatmap.py  plot_sv_weight_heatmap_cross_video.py  plot_target_object_counts_vs_time.py  read_pixel_hsv_from_video.py  sv_util_threshold_ubenchmark.py  sv_util_threshold_ubenchmark.sh
src/e2e_sim/: merged_stream_evals.py  plot_activity.py  plot_qor_for_e2e.py  testing_bin.py
src/interface_library/: CMakeLists.txt  comm_agent.cpp  comm_agent.h  main.cpp  main.cpp.backup
src/model/: abstract_model.py  build_model.py  sv_matrix_model.py
src/plot_results/: compute_e2e_graphs.py  compute_e2e_graphs_from_dataframe.py  compute_false_positives_and_negatives.py  generate_e2e_graphs.sh
src/python_server/: README.md  binning_experiments.sh  config.properties  example_calls.py  generate_config.sh  generate_configs.sh  generate_hsb_config.sh  hsb_experiments_svs.sh  mapping_features.py  request_handler.py  run_full_test_experiment.sh  server.py  server_old_inflexible.py  test_composite_req.py  test_new_interface.py  test_server.py  test_shedding.py
src/runtime_analysis/: download_log.sh  plot_runtime_breakdown.py
src/unique_objects/: cmds.sh  extract_extended_obj_lifetimes.py  extract_extended_obj_lifetimes.sh  extract_neg_frames_utilwise.py  extract_negative_frames.py  extract_negative_frames.sh  extract_pos_frames_utilwise.py  (+5 more)
(+171 files in other folders)
